<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Analytics</string>
    <string name="hello_world">Hello world!</string>
    <string name="mix_panel_settings">MixPanel Settings</string>
    <string name="flurry_settings">Flurry Settings</string>

    <string-array name="users">
        <item>Lady Gaga</item>
        <item>Miley Cyrus</item>
        <item>Lindsay Lohan</item>
        <item>Madonna</item>
        <item>Katy Perry</item>
        <item>Amy Whinehouse</item>
        <item>Christina Aguilera</item>
        <item>Britney Spears</item>
    </string-array>

    <string-array name="company">
        <item>A</item>
        <item>B</item>
        <item>C</item>
        <item>D</item>
    </string-array>

    <string name="login">Login</string>
    <string name="dialog_mix_panel_title">Set new MixPanel Token</string>
    <string name="dialog_flurry_title">Set new Flurry Token</string>
    <string name="dialog_hint">Put new Token here</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="token_empty">Token can\'t be empty</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="login_message">Successfully logged as %s</string>
    <string name="logged_as">Logged as: %s</string>
    <string name="company_as">Company: %s</string>
    <string name="new_project">Project</string>
    <string name="new_note">Note</string>
    <string name="new_comment">Comment</string>
    <string name="history">History</string>
    <string name="successfully_added">Successfully added %s</string>
    <string name="send_to">Send logs to...</string>
    <string name="dialog_countly_server_title">Set new Countly server</string>
    <string name="dialog_countly_key_title">Set new Contly Token</string>
    <string name="countly_key">Contly Token</string>
    <string name="countly_server">Contly Server</string>
    <string name="enable_mix_panel">Enable MixPanel</string>
    <string name="enable_flurry">Enable Flurry</string>
    <string name="enable_countly">Enable Countly</string>
    <string name="enable_localytics">Enable Localytics</string>
    <string name="user">User</string>
    <string name="company">Company</string>
    <string name="events">Events</string>
</resources>
