<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".LoginActivity">
    <item
        android:id="@+id/actionMixPanel"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/mix_panel_settings" />
    <item
        android:id="@+id/actionFlurry"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/flurry_settings" />
    <item
        android:id="@+id/actionCountlyServer"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/countly_server" />
    <item
        android:id="@+id/actionContlyKey"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/countly_key" />
</menu>
