<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="bnsantos.com.analytics.example.activity.MainActivity">

    <TextView
        android:id="@+id/loggedAs"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:text="@string/logged_as"
        android:textSize="@dimen/text_size"
        android:textStyle="bold" />
    <TextView
        android:id="@+id/companyTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="10dp"
        android:text="@string/company_as"
        android:textSize="12sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="@dimen/text_size"
        android:text="@string/events"/>

    <View
        android:background="#ffffff"
        android:layout_width = "fill_parent"
        android:layout_height="1dip"
        android:layout_below="@+id/loginButton"
        android:layout_margin="@dimen/margin"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/projectButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/new_project" />

        <Button
            android:id="@+id/noteButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:text="@string/new_note" />

        <Button
            android:id="@+id/commentButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/new_comment" />
    </LinearLayout>

    <View
        android:background="#ffffff"
        android:layout_width = "fill_parent"
        android:layout_height="1dip"
        android:layout_below="@+id/loginButton"
        android:layout_margin="@dimen/margin"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/historyTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/history"
            android:textSize="18sp"
            android:textStyle="bold" />

        <ImageButton
            android:id="@+id/clearButton"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_gravity="left"
            android:src="@drawable/ic_action_discard" />

        <ImageButton
            android:id="@+id/shareButton"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_gravity="right"
            android:src="@drawable/ic_action_share" />
    </LinearLayout>

    <ListView
        android:id="@+id/historyListView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:stackFromBottom="true"
        android:transcriptMode="alwaysScroll" />
</LinearLayout>
